# Research-Agent-Harness

./: .gitignore  README.md  SKILL.md  install.py  pyproject.toml  requirements.txt
docs/design/: mid-run-steering.md  run-logic.md  skill-to-function-integration.md
research_harness/: __init__.py  __main__.py  agent.py  cli.py  evaluate.py  log.py  main.py  pipeline.py  registry.py  review.py  review_app.py  steering.py  stop.py  utils.py
research_harness/agentics/: __init__.py
research_harness/citation_gate/: LICENSE  __init__.py  __main__.py  _resolve.py  _text_similarity.py  arxiv_client.py  bib.py  cache.py  crossref_client.py  openalex_client.py  reducer.py  semantic_scholar_client.py
research_harness/references/: __init__.py  citation_discipline.py  venue_checklists.py  venue_scoring.py  writing_principles.py
research_harness/references/examples/: literature.md  writing_english.md
research_harness/stages/: __init__.py  experiment.py  idea.py  init.py  literature.py  presentation.py  rebuttal.py  review.py  theory.py  writing.py
research_harness/stages/experiment/: __init__.py  check_training.py  design_experiments.py  experiment_bridge.py  run_experiment.py
research_harness/stages/idea/: __init__.py  check_novelty.py  generate_ideas.py  rank_ideas.py
research_harness/stages/integrity/: __init__.py
research_harness/stages/interactive/: __init__.py
research_harness/stages/literature/: README.md  __init__.py  _actions.py  _artifacts.py  _state.py  annotate_papers.py  comprehensive_lit_review.py  digest_paper.py  evolve_framework.py  extract_framework.py  identify_gaps.py  prisma.py  search_arxiv.py  search_papers_for_topic.py  search_semantic_scholar.py  seed_surveys.py  survey_topic.py  synthesize_literature.py
research_harness/stages/meta/: __init__.py  meta_optimize.py
research_harness/stages/presentation/: __init__.py  generate_poster.py  generate_slides.py  generate_speaker_notes.py
research_harness/stages/rebuttal/: __init__.py  anti_sycophancy_guard.py  build_rebuttal_strategy.py  draft_rebuttal.py  parse_reviews.py
research_harness/stages/review/: README.md  __init__.py  _codex_run.py  _extract_judgment.py  _review_prose_codex.py  adaptive_summarize_priors.py  build_revision_plan.py  calibrate_score.py  fix_paper.py  (+11 more)
research_harness/wiki/: __init__.py  research_wiki.py  wiki_agent.py
research_harness/writing_lint/: LICENSE  __init__.py  _files.py  _latex.py  citation_context.py  uncited_assertions.py
skills/agentic-research/: SKILL.md
skills/gptzero-check/: SKILL.md
skills/humanize-paper-review/: SKILL.md
skills/official-paper-review/: SKILL.md
skills/paper-review/: SKILL.md
skills/self-paper-review/: SKILL.md
templates/: README.md
tests/: conftest.py  test_citation_gate.py  test_e2e.py  test_evaluate.py  test_guard_and_prompts.py  test_imports.py  test_init.py  test_integrity_gate.py  test_interactive.py  test_literature_loop.py  test_llm_functions.py  test_log.py  test_main.py  test_personas.py  test_pipeline.py  test_prisma_report.py  test_references.py  test_registry.py  test_review_upgrades.py  test_run_logic.py  test_steering.py  test_utils.py  test_wiki.py  test_writing.py  test_writing_lint.py
(+1330 files in other folders)
